--- a/petition-site/tsconfig.json
+++ b/petition-site/tsconfig.json
@@ -1,7 +1,21 @@
 {
-  "files": [],
-  "references": [
-    { "path": "./tsconfig.app.json" },
-    { "path": "./tsconfig.node.json" }
-  ]
+  "compilerOptions": {
+    "target": "ES2020",                     // Modern JS target
+    "module": "ESNext",       
+    "jsx": "react-jsx",              // Works with Vite
+    "lib": ["DOM", "ESNext"],               // Include browser + modern features
+    "strict": true,                         // Enable strict TypeScript checks
+    "moduleResolution": "Node",
+    "esModuleInterop": true,                // Allows 'import express from "express"'
+    "forceConsistentCasingInFileNames": true,
+    "skipLibCheck": true,
+    "resolveJsonModule": true,
+    "noImplicitAny": true,
+    "outDir": "dist"                        // Compiled output (optional)
+  },
+  "include": [
+    "src",                                  // Frontend
+    "src/functions"                  // Backend Firebase functions
+  ],
+  "exclude": ["node_modules"]
 }
