--- a/petition-site/package.json
+++ b/petition-site/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hcaptcha/react-hcaptcha": "^1.12.1",
     "@hookform/resolvers": "^5.2.1",
     "axios": "^1.11.0",
     "firebase": "^12.2.1",
