--- a/petition-site/functions/package.json
+++ b/petition-site/functions/package.json
@@ -11,7 +11,7 @@
     "logs": "firebase functions:log"
   },
   "engines": {
-    "node": "22"
+    "node": "20"
   },
   "main": "lib/index.js",
   "dependencies": {
@@ -22,12 +22,13 @@
     "firebase-admin": "^12.7.0",
     "firebase-functions": "^6.0.1",
     "helmet": "^8.1.0",
-    "node-fetch": "^3.3.2",
+    "node-fetch": "^2.6.7",
     "zod": "^4.1.5"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "@types/node-fetch": "^2.6.13",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
     "@typescript-eslint/parser": "^5.12.0",
     "eslint": "^8.9.0",
