--- a/petition-site/package.json
+++ b/petition-site/package.json
@@ -16,6 +16,7 @@
     "@hookform/resolvers": "^5.2.1",
     "axios": "^1.11.0",
     "firebase": "^12.2.1",
+    "gsap": "^3.13.0",
     "motion": "^12.23.22",
     "ogl": "^1.0.11",
     "react": "^19.1.1",
