--- a/petition-site/package.json
+++ b/petition-site/package.json
@@ -15,6 +15,7 @@
     "@hcaptcha/react-hcaptcha": "^1.12.1",
     "@hookform/resolvers": "^5.2.1",
     "axios": "^1.11.0",
+    "clsx": "^2.1.1",
     "firebase": "^12.2.1",
     "gsap": "^3.13.0",
     "motion": "^12.23.22",
@@ -44,7 +45,7 @@
     "globals": "^16.3.0",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
-    "tailwindcss": "^4.1.13",
+    "tailwindcss": "^4.1.14",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.39.1",
     "vite": "^7.1.2"
