--- a/petition-site/package.json
+++ b/petition-site/package.json
@@ -18,11 +18,13 @@
     "clsx": "^2.1.1",
     "firebase": "^12.2.1",
     "gsap": "^3.13.0",
+    "lenis": "^1.3.11",
     "motion": "^12.23.22",
     "ogl": "^1.0.11",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.62.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.8.2",
     "zod": "^4.1.5"
   },
