--- a/petition-site/package.json
+++ b/petition-site/package.json
@@ -19,6 +19,7 @@
     "firebase": "^12.2.1",
     "gsap": "^3.13.0",
     "lenis": "^1.3.11",
+    "lucide-react": "^0.545.0",
     "motion": "^12.23.22",
     "ogl": "^1.0.11",
     "react": "^19.1.1",
